--- a/Android Application/app/src/main/res/layout/calendar_item_xml.xml
+++ b/Android Application/app/src/main/res/layout/calendar_item_xml.xml
@@ -6,6 +6,7 @@
     android:weightSum="100">
 
     <TextView
+        android:id="@+id/month_name_tv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="15"
@@ -110,6 +111,7 @@
         android:weightSum="100">
 
         <TextView
+            android:id="@+id/tv_day_1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -118,6 +120,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -126,6 +129,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -134,6 +138,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -142,6 +147,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -150,6 +156,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -158,6 +165,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_7"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -180,6 +188,7 @@
         android:weightSum="100">
 
         <TextView
+            android:id="@+id/tv_day_8"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -188,6 +197,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_9"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -196,6 +206,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_10"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -204,6 +215,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_11"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -212,6 +224,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_12"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -220,6 +233,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_13"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -228,6 +242,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_14"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -250,6 +265,7 @@
         android:weightSum="100">
 
         <TextView
+            android:id="@+id/tv_day_15"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -258,6 +274,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_16"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -266,6 +283,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_17"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -274,6 +292,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_18"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -282,6 +301,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_19"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -290,6 +310,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_20"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -298,6 +319,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_21"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -320,6 +342,7 @@
         android:weightSum="100">
 
         <TextView
+            android:id="@+id/tv_day_22"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -328,6 +351,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_23"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -336,6 +360,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_24"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -344,6 +369,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_25"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -352,6 +378,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_26"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -360,6 +387,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_27"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -368,6 +396,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_28"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -390,6 +419,7 @@
         android:weightSum="100">
 
         <TextView
+            android:id="@+id/tv_day_29"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -398,6 +428,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_30"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -406,6 +437,7 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/tv_day_31"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
