--- a/Android Application/app/src/main/res/layout/calendar_item_xml.xml
+++ b/Android Application/app/src/main/res/layout/calendar_item_xml.xml
@@ -34,6 +34,7 @@
         android:weightSum="100">
 
         <TextView
+            android:id="@+id/d1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -43,6 +44,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/d2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -52,6 +54,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/d3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -61,6 +64,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/d4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -70,6 +74,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/d5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -79,6 +84,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/d6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
@@ -88,6 +94,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/d7"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14.28"
