--- a/Android Application/app/src/main/res/layout/activity_add_birthday.xml
+++ b/Android Application/app/src/main/res/layout/activity_add_birthday.xml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".Activity.AddBirthdayActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:layout_gravity="top"
+        android:weightSum="100">
+
+
+        <android.support.design.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/addBirthday_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:layout_weight="8"
+                android:src="@mipmap/back" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="68"
+                android:gravity="center"
+                android:text="Add"
+                android:textColor="@color/grey_c"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:src="@mipmap/settings"
+                android:visibility="invisible" />
+
+        </android.support.design.widget.CoordinatorLayout>
+
+    </android.support.v7.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:fillViewport="true">
 
         <LinearLayout
@@ -20,59 +66,17 @@
             android:orientation="vertical">
 
 
-            <android.support.v7.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="100">
-
-
-                <android.support.design.widget.CoordinatorLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/addBirthday_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="start|center_vertical"
-                        android:layout_weight="8"
-                        android:src="@mipmap/back" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="68"
-                        android:gravity="center"
-                        android:text="Add"
-                        android:textColor="@color/grey_c"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end|center_vertical"
-                        android:src="@mipmap/settings"
-                        android:visibility="invisible" />
-
-                </android.support.design.widget.CoordinatorLayout>
-
-            </android.support.v7.widget.Toolbar>
-
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:weightSum="100">
+                android:orientation="horizontal">
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                <ImageView
+                    android:id="@+id/add_birthday_add_photo"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:scaleType="fitXY"
                     android:background="@mipmap/add_photo" />
             </LinearLayout>
 
@@ -90,7 +94,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -128,7 +131,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -150,7 +152,7 @@
                         android:layout_height="wrap_content"
                         android:background="@null"
                         android:gravity="center"
-                        android:hint="1998/01/19"
+                        android:hint="Choose Date"
                         android:maxLines="1"
                         android:textColorHint="@color/grey_b"
                         android:textSize="15sp"
@@ -165,7 +167,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -187,6 +188,7 @@
                         android:layout_height="wrap_content"
                         android:background="@null"
                         android:gravity="center"
+                        android:inputType="textEmailAddress"
                         android:hint="example@gmail.com"
                         android:maxLines="1"
                         android:textColorHint="@color/grey_b"
@@ -202,7 +204,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -225,6 +226,7 @@
                         android:background="@null"
                         android:gravity="center"
                         android:hint="09375679821"
+                        android:inputType="phone"
                         android:maxLines="1"
                         android:textColorHint="@color/grey_b"
                         android:textSize="15sp"
@@ -239,7 +241,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -260,6 +261,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
+                        android:maxLines="1"
+                        android:maxLength="40"
                         android:hint="Happy Birthday My Dear..."
                         android:paddingEnd="10dp"
                         android:paddingStart="10dp"
@@ -269,11 +272,9 @@
 
                 </LinearLayout>
 
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <EditText
@@ -281,31 +282,34 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:hint="age" />
+                        android:inputType="number"
+                        android:maxLines="1"
+                        android:enabled="false"
+                        android:hint="age : 0" />
 
                     <EditText
                         android:id="@+id/addBirthday_relation"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:maxLength="10"
                         android:hint="relation" />
 
                 </LinearLayout>
-
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/add_birthday_save"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@color/green_b"
-                android:gravity="center"
-                android:text="Save"
-                android:textColor="#ffffff"
-                android:textSize="22sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+    <TextView
+        android:id="@+id/add_birthday_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/green_b"
+        android:text="Save"
+        android:gravity="center_horizontal"
+        android:textColor="#ffffff"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        android:layout_gravity="bottom"/>
+</android.support.design.widget.CoordinatorLayout>
