--- a/Android Application/app/src/main/res/layout/activity_alarm.xml
+++ b/Android Application/app/src/main/res/layout/activity_alarm.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.BirthdayOverview"
+    tools:context=".Activity.AlarmActivity"
     android:weightSum="100"
     android:orientation="vertical">
 
@@ -31,19 +31,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="15"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:orientation="horizontal"
         android:weightSum="100">
 
-            <ImageView
-                android:id="@+id/overview_picture"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:scaleType="fitXY"
-                android:background="@mipmap/balloon"
-                />
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/alarm_photo"
+            android:scaleType="fitXY"
+            android:background="@mipmap/balloon"
+            />
 
 
     </LinearLayout>
@@ -78,7 +77,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_name"
+                android:id="@+id/alarm_name"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -108,7 +107,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_date"
+                android:id="@+id/alarm_date"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -121,7 +120,7 @@
         </LinearLayout>
 
     </LinearLayout>
-    
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -152,7 +151,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_email"
+                android:id="@+id/alarm_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="50"
@@ -183,7 +182,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_phone"
+                android:id="@+id/alarm_phone"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -211,26 +210,26 @@
 
 
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="50"
-                android:text="Letter"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:textColor="@color/green_a"
-                android:gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:text="Letter"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="@color/green_a"
+            android:gravity="center"/>
 
-            <TextView
-                android:id="@+id/overview_letter"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="50"
-                android:text="Happy Birthday my dear friend ."
-                android:textSize="13sp"
-                android:textStyle="bold"
-                android:textColor="@color/grey_c"
-                android:gravity="center"/>
+        <TextView
+            android:id="@+id/alarm_letter"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:text="Happy Birthday my dear friend ."
+            android:textSize="13sp"
+            android:textStyle="bold"
+            android:textColor="@color/grey_c"
+            android:gravity="center"/>
 
     </LinearLayout>
 
@@ -264,7 +263,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_nextbd"
+                android:id="@+id/alarm_nextbd"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -294,7 +293,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_lastbd"
+                android:id="@+id/alarm_lastbd"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -338,7 +337,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_age"
+                android:id="@+id/alarm_age"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -368,7 +367,7 @@
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/overview_relation"
+                android:id="@+id/alarm_relation"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="50"
@@ -390,18 +389,7 @@
         android:orientation="horizontal"
         android:weightSum="100">
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="40.25"/>
 
-        <ImageButton
-            android:id="@+id/overview_edit_button"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="20.5"
-            android:background="@mipmap/edit_b"
-            android:gravity="center"/>
 
     </LinearLayout>
 
