--- a/Android Application/app/src/main/res/layout/fragment_list.xml
+++ b/Android Application/app/src/main/res/layout/fragment_list.xml
@@ -6,6 +6,9 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".Fragment.ListFragment"
 android:weightSum="100"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
+    android:background="@color/list_background_color"
 android:orientation="vertical">
 
 <Space
