--- a/Android Application/app/src/main/res/values/colors.xml
+++ b/Android Application/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grey_b">#b8b8b8</color>
     <color name="grey_c"> #686868</color>
     <color name="white"> #ffffff</color>
+    <color name="list_background_color">#f1f1f1</color>
 </resources>
